# robot-learning-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.openai/: hosting.json
app/: data.js  globals.css  layout.jsx  page.jsx
app/components/: AIAssistant.jsx  AISettingsPanel.jsx
app/lib/: ai-client.js  settings-client.js
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  knowledge.py  llm.py  main.py  schemas.py  storage.py
backend/tests/: test_api.py  test_knowledge.py  test_storage_api.py
content/: knowledge.json
scripts/: export-knowledge.mjs
